# libdxfrw

./: CMakeLists.txt
lib/: libiconv.lib
src/: libdwgr.cpp
src/intern/: drw_textcodec.cpp
